Fix text overflow in JIRA live activity

--- a/themes/reactos/static/css/style.blue.css
+++ b/themes/reactos/static/css/style.blue.css
@@ -1213,6 +1213,7 @@ address {
 #jirafeed {
 	list-style: none;
 	padding: 0;
+	overflow-wrap: break-word;
 }
 #jirafeed .time {
 	color: #999999;
